...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ONC-Cm-x6R" userLabel="Like button">
                                                    <rect key="frame" x="335" y="4" width="42" height="42"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="42" id="JIK-nU-asb"/>
                                                        <constraint firstAttribute="width" constant="42" id="pdW-MW-G56"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="ScrollView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="delegate" destination="n94-Qy-Sdr" id="D9B-Nr-Wny"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RUG-eq-Ql2" userLabel="Back button">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back button"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="38h-Vi-Faw"/>
                                    <constraint firstAttribute="width" constant="48" id="h8y-ta-l6F"/>
                                </constraints>
...
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Authenticate"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <segue destination="spo-ow-W2x" kind="show" identifier="ShowWebView" id="TEL-l2-Kf4"/>
                                </connections>
                            </button>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_logo" translatesAutoresizingMaskIntoConstraints="NO" id="yd8-vV-LJi" userLabel="Auth logo">
...
                                <color key="backgroundColor" name="YP_white_color"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="FHL-HO-IHP">
                                <rect key="frame" x="0.0" y="103" width="393" height="4"/>
                                <color key="progressTintColor" name="YP_black_color"/>
                            </progressView>
...
