...
        self.alertPresenter = AlertPresenter(delegate: view as? UIViewController)
    }
    
    func confirmLogout() {
        alertPresenter?.showTwoOptionsAlert(title: "Пока, пока!",
                                            message: "Уверены, что хотите выйти?",
                                            confirmButtonText: "Да",
                                            cancelButtonText: "Нет") { [weak self] in
            self?.logoutService.logout()
        }
    }
    
    func updateAvatar() {
...
